Load Tab's Menu Bar Fixes
Made the search bar extend to fill the whole space and now the
download/local button has a border so looks more like a button.